--- a/package.json
+++ b/package.json
@@ -33,13 +33,17 @@
     "react-redux": "^8.0.7",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.0",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "prettier-plugin-tailwindcss": "^0.2.1"
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "@types/pg": "^8.10.9"
   }
 }
